objects/DMND_Potential_Warning__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Duplicates__c</fullName>
        <label>Total Potential Duplicates</label>
        <summaryForeignKey>DMND_Duplicate__c.Potential_Duplicate_Warning__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Warning_Key__c</fullName>
        <externalId>true</externalId>
        <label>Warning Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Potential Duplicate Warning</label>
    <nameField>
        <displayFormat>Warning-{0}</displayFormat>
        <label>Warning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Duplicate Warnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>